--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@ffmpeg/ffmpeg": "^0.6.0",
     "hammerjs": "^2.0.8",
+    "ngx-file-helpers": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
