--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,8 @@
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.worker.ts",
+    "src/**/*.worker.js"
   ]
 }
